--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -476,9 +476,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VUw-5E-oBN">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VUw-5E-oBN">
                                 <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="barTintColor" red="0.0" green="0.40784313725490196" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -496,7 +495,7 @@
                                             <rect key="frame" x="88" y="4" width="199" height="36"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                            <state key="normal" title="Uso de datos">
+                                            <state key="normal" title="Datos de uso">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
                                             <connections>
@@ -506,11 +505,13 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="smQ-tb-kQu">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="smQ-tb-kQu">
                                 <rect key="frame" x="0.0" y="88" width="375" height="724"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="724" id="3iF-mi-SaM"/>
+                                </constraints>
                                 <color key="separatorColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -521,21 +522,29 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="60.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8B-cI-4NK">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8B-cI-4NK">
                                                     <rect key="frame" x="30" y="22" width="326" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="em0-dH-Biz">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="em0-dH-Biz">
                                                     <rect key="frame" x="30" y="4" width="326" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="em0-dH-Biz" secondAttribute="trailing" constant="4" id="FCu-86-4A5"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="em0-dH-Biz" secondAttribute="bottom" constant="25" id="MQs-e0-LYa"/>
+                                                <constraint firstItem="em0-dH-Biz" firstAttribute="top" secondItem="Aih-yD-ZDF" secondAttribute="topMargin" constant="-7" id="T9U-w9-B63"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="U8B-cI-4NK" secondAttribute="bottom" constant="7" id="V1u-xv-gZc"/>
+                                                <constraint firstItem="em0-dH-Biz" firstAttribute="leading" secondItem="Aih-yD-ZDF" secondAttribute="leadingMargin" constant="15" id="YTS-Py-scw"/>
+                                                <constraint firstItem="em0-dH-Biz" firstAttribute="leading" secondItem="U8B-cI-4NK" secondAttribute="leading" id="hmI-NX-fx5"/>
+                                                <constraint firstItem="U8B-cI-4NK" firstAttribute="top" secondItem="Aih-yD-ZDF" secondAttribute="topMargin" constant="11" id="j5a-vH-oum"/>
+                                                <constraint firstItem="em0-dH-Biz" firstAttribute="trailing" secondItem="U8B-cI-4NK" secondAttribute="trailing" id="rBf-r6-yU4"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
@@ -547,6 +556,16 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="smQ-tb-kQu" firstAttribute="top" secondItem="VUw-5E-oBN" secondAttribute="bottom" id="EpG-An-5Nx"/>
+                            <constraint firstItem="VUw-5E-oBN" firstAttribute="top" secondItem="V67-Yy-LVX" secondAttribute="top" id="Hbz-Uc-mEN"/>
+                            <constraint firstAttribute="trailing" secondItem="smQ-tb-kQu" secondAttribute="trailing" id="MfG-Ke-bpj"/>
+                            <constraint firstAttribute="bottom" secondItem="smQ-tb-kQu" secondAttribute="bottom" id="XWF-jD-GMs"/>
+                            <constraint firstItem="smQ-tb-kQu" firstAttribute="leading" secondItem="VUw-5E-oBN" secondAttribute="leading" id="YPC-zH-VYD"/>
+                            <constraint firstItem="smQ-tb-kQu" firstAttribute="top" secondItem="V67-Yy-LVX" secondAttribute="top" constant="44" id="ge6-T2-k2T"/>
+                            <constraint firstItem="smQ-tb-kQu" firstAttribute="leading" secondItem="iwd-fB-jjx" secondAttribute="leading" id="gh6-hS-J3P"/>
+                            <constraint firstItem="smQ-tb-kQu" firstAttribute="trailing" secondItem="VUw-5E-oBN" secondAttribute="trailing" id="nzJ-cC-JVT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="V67-Yy-LVX"/>
                     </view>
                     <connections>
@@ -566,14 +585,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2QE-Bs-rgB">
-                                <rect key="frame" x="43" y="198" width="288" height="326"/>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2QE-Bs-rgB">
+                                <rect key="frame" x="43" y="198" width="288" height="426"/>
                                 <subviews>
-                                    <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnA-Tg-FNS">
+                                    <pickerView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lnA-Tg-FNS">
                                         <rect key="frame" x="-16" y="-23" width="316" height="363"/>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </pickerView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Frecuencia de sincronización" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnx-Nm-WDi">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Frecuencia de sincronización" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnx-Nm-WDi">
                                         <rect key="frame" x="-2" y="27" width="293" height="47"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="47" id="kBE-NR-0Yu"/>
@@ -585,22 +604,15 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="lnA-Tg-FNS" secondAttribute="bottom" constant="-14" id="LI9-Bf-l59"/>
-                                    <constraint firstItem="fnx-Nm-WDi" firstAttribute="centerX" secondItem="2QE-Bs-rgB" secondAttribute="centerX" id="NaT-RR-7br"/>
                                     <constraint firstItem="lnA-Tg-FNS" firstAttribute="top" secondItem="fnx-Nm-WDi" secondAttribute="bottom" constant="8" symbolic="YES" id="Rz2-gJ-4WC"/>
-                                    <constraint firstItem="lnA-Tg-FNS" firstAttribute="leading" secondItem="2QE-Bs-rgB" secondAttribute="leading" constant="-16" id="Sg6-1h-MN1"/>
-                                    <constraint firstAttribute="trailing" secondItem="lnA-Tg-FNS" secondAttribute="trailing" constant="-12" id="ce6-YO-FGI"/>
-                                    <constraint firstItem="fnx-Nm-WDi" firstAttribute="top" secondItem="2QE-Bs-rgB" secondAttribute="top" constant="27" id="sr3-xN-MaI"/>
-                                    <constraint firstItem="fnx-Nm-WDi" firstAttribute="leading" secondItem="2QE-Bs-rgB" secondAttribute="leading" constant="-2" id="yUT-fc-iFe"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="leading" secondItem="Rb1-YJ-eEN" secondAttribute="leading" constant="43" id="RRj-dr-hKa"/>
-                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="top" secondItem="Rb1-YJ-eEN" secondAttribute="top" constant="154" id="gZw-Lv-auO"/>
-                            <constraint firstItem="Rb1-YJ-eEN" firstAttribute="bottom" secondItem="2QE-Bs-rgB" secondAttribute="bottom" constant="254" id="rAz-dj-VVQ"/>
-                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="centerX" secondItem="8dl-qW-jjo" secondAttribute="centerX" id="sEB-PU-8XU"/>
+                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="centerX" secondItem="Rb1-YJ-eEN" secondAttribute="centerX" id="UXZ-aJ-5eM"/>
+                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="top" secondItem="Rb1-YJ-eEN" secondAttribute="top" constant="154" id="iWX-gH-gDL"/>
+                            <constraint firstItem="2QE-Bs-rgB" firstAttribute="centerY" secondItem="Rb1-YJ-eEN" secondAttribute="centerY" id="z3U-4M-XJG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Rb1-YJ-eEN"/>
                     </view>
@@ -856,9 +868,9 @@
         <image name="icons8-phone-25.png" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ogq-Tx-9xs"/>
+        <segue reference="kqM-wB-Zzq"/>
         <segue reference="nvK-tH-cvI"/>
-        <segue reference="ka5-fb-KfB"/>
-        <segue reference="2T0-5Y-lpd"/>
+        <segue reference="tZU-ca-AIb"/>
+        <segue reference="6n4-lH-wgY"/>
     </inferredMetricsTieBreakers>
 </document>
