--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -247,9 +247,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gD7-Vb-5sJ">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gD7-Vb-5sJ">
                                 <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="barTintColor" red="0.0" green="0.40784313725490196" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -277,9 +276,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nYO-Tl-emc">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nYO-Tl-emc">
                                 <rect key="frame" x="0.0" y="88" width="375" height="724"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -376,6 +374,15 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nYO-Tl-emc" firstAttribute="trailing" secondItem="aS2-IV-WsJ" secondAttribute="trailing" id="DMc-gQ-lt6"/>
+                            <constraint firstItem="nYO-Tl-emc" firstAttribute="top" secondItem="gD7-Vb-5sJ" secondAttribute="bottom" id="G2f-GW-bdg"/>
+                            <constraint firstItem="nYO-Tl-emc" firstAttribute="leading" secondItem="aS2-IV-WsJ" secondAttribute="leading" id="NC6-YE-G8A"/>
+                            <constraint firstAttribute="bottom" secondItem="nYO-Tl-emc" secondAttribute="bottom" id="T3c-KJ-FKq"/>
+                            <constraint firstItem="aS2-IV-WsJ" firstAttribute="trailing" secondItem="gD7-Vb-5sJ" secondAttribute="trailing" id="T4v-Uv-BIT"/>
+                            <constraint firstItem="gD7-Vb-5sJ" firstAttribute="leading" secondItem="aS2-IV-WsJ" secondAttribute="leading" id="Tr7-vl-MhL"/>
+                            <constraint firstItem="gD7-Vb-5sJ" firstAttribute="top" secondItem="aS2-IV-WsJ" secondAttribute="top" id="W19-tc-AUN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aS2-IV-WsJ"/>
                     </view>
                     <connections>
@@ -866,9 +873,10 @@
         <image name="icons8-phone-25.png" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="PHw-WI-6y8"/>
         <segue reference="Ogq-Tx-9xs"/>
         <segue reference="nvK-tH-cvI"/>
-        <segue reference="tZU-ca-AIb"/>
+        <segue reference="7fB-Uz-4Ry"/>
         <segue reference="6n4-lH-wgY"/>
     </inferredMetricsTieBreakers>
 </document>
