--- a/Dicloud/Base.lproj/Main.storyboard
+++ b/Dicloud/Base.lproj/Main.storyboard
@@ -403,9 +403,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FDW-ZW-DpM">
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FDW-ZW-DpM">
                                 <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="barTintColor" red="0.0" green="0.40784313725490196" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <textAttributes key="titleTextAttributes">
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -419,10 +418,10 @@
                                                 <segue destination="WqY-IU-135" kind="show" identifier="NotificationsVC" animates="NO" id="azu-co-tfX"/>
                                             </connections>
                                         </barButtonItem>
-                                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="okI-ra-4TM">
-                                            <rect key="frame" x="71" y="4.6666666666666679" width="199" height="35"/>
+                                        <button key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="okI-ra-4TM">
+                                            <rect key="frame" x="71" y="4" width="199" height="36"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" name="TimesNewRomanPS-BoldMT" family="Times New Roman" pointSize="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                             <state key="normal" title="Sonidos">
                                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
@@ -445,9 +444,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TqL-dl-5BM">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TqL-dl-5BM">
                                 <rect key="frame" x="0.0" y="88" width="375" height="724"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -465,6 +463,15 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="FDW-ZW-DpM" firstAttribute="leading" secondItem="TqL-dl-5BM" secondAttribute="leading" id="0aj-Yb-AnE"/>
+                            <constraint firstItem="FDW-ZW-DpM" firstAttribute="top" secondItem="0RS-iI-ybF" secondAttribute="top" id="FWP-92-J6n"/>
+                            <constraint firstAttribute="trailing" secondItem="FDW-ZW-DpM" secondAttribute="trailing" id="H0R-9L-RHf"/>
+                            <constraint firstItem="TqL-dl-5BM" firstAttribute="top" secondItem="FDW-ZW-DpM" secondAttribute="bottom" id="P0F-8Y-kqH"/>
+                            <constraint firstItem="FDW-ZW-DpM" firstAttribute="leading" secondItem="ocF-eD-8xi" secondAttribute="leading" id="cfZ-7L-XlV"/>
+                            <constraint firstAttribute="bottom" secondItem="TqL-dl-5BM" secondAttribute="bottom" id="fJz-C0-EXV"/>
+                            <constraint firstItem="FDW-ZW-DpM" firstAttribute="trailing" secondItem="TqL-dl-5BM" secondAttribute="trailing" id="ko0-kd-UGR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="0RS-iI-ybF"/>
                     </view>
                     <connections>
@@ -874,7 +881,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="kqM-wB-Zzq"/>
-        <segue reference="nvK-tH-cvI"/>
+        <segue reference="azu-co-tfX"/>
         <segue reference="7fB-Uz-4Ry"/>
         <segue reference="6n4-lH-wgY"/>
     </inferredMetricsTieBreakers>
